--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -41,7 +41,7 @@
 				</ion-item>
 				<ion-item class="item-left" href="#/app/dealerprd">
 					<h2>Shop</h2>
-					<div class="pull-right item-right text-capitalize">
+					<div class="pull-right item-right text-capitalize blue">
 						Croma
 					</div>
 				</ion-item>
