--- a/templates/dealerprd.html
+++ b/templates/dealerprd.html
@@ -15,26 +15,34 @@
 -->
             <div class="row productsCol">
                 <div class="col col-33 text-center">
-                    <img src="img/1.jpg" class="full-image">
-                    <h5 class="bold">Xperia Z</h5>
-                    <h5>9000</h5>
+                    <a href="#/app/productdetail">
+                        <img src="img/1.jpg" class="full-image">
+                        <h5 class="bold">Xperia Z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
-                    <img src="img/1.jpg" class="full-image">
-                    <h5 class="bold">Xperia Z</h5>
-                    <h5>9000</h5>
+                    <a href="#/app/productdetail">
+                        <img src="img/1.jpg" class="full-image">
+                        <h5 class="bold">Xperia Z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
-                    <img src="img/1.jpg" class="full-image">
-                    <h5 class="bold">Xperia Z</h5>
-                    <h5>9000</h5>
+                    <a href="#/app/productdetail">
+                        <img src="img/1.jpg" class="full-image">
+                        <h5 class="bold">Xperia Z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
             </div>
             <div class="row productsCol">
                 <div class="col col-33 text-center">
-                    <img src="img/1.jpg" class="full-image">
-                    <h5 class="bold">Xperia Z</h5>
-                    <h5>9000</h5>
+                    <a href="#/app/productdetail">
+                        <img src="img/1.jpg" class="full-image">
+                        <h5 class="bold">Xperia Z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
                 <div class="col col-33 text-center">
                     <img src="img/1.jpg" class="full-image">
@@ -42,9 +50,11 @@
                     <h5>9000</h5>
                 </div>
                 <div class="col col-33 text-center">
-                    <img src="img/1.jpg" class="full-image">
-                    <h5 class="bold">Xperia Z</h5>
-                    <h5>9000</h5>
+                    <a href="#/app/productdetail">
+                        <img src="img/1.jpg" class="full-image">
+                        <h5 class="bold">Xperia Z</h5>
+                        <h5>9000</h5>
+                    </a>
                 </div>
             </div>
         </div>
