--- a/templates/menu.html
+++ b/templates/menu.html
@@ -25,7 +25,7 @@
                 <ion-item nav-clear menu-close href="#/app/myproducts">
                     <span>My Products</span>
                 </ion-item>
-                
+
                 <ion-item nav-clear menu-close href="#/app/orders">
                     <span>Orders</span>
                 </ion-item>
@@ -36,6 +36,9 @@
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/transaction">
                     <span>Transaction History</span>
+                </ion-item>
+                <ion-item nav-clear menu-close href="#/app/notification">
+                    <span>Notification</span>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/aboutus">
                     <span>About Us</span>
