--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -23,6 +23,14 @@
                         <span class="input-label">Reason:</span>
                         <input type="text" ng-model="add.reason">
                     </label>
+                     <label class="item item-input">
+                        <span class="input-label">Purchase Value</span>
+                        <input type="text" ng-model="add.amount">
+                    </label>
+                     <label class="item item-input">
+                        <span class="input-label">Sell Value</span>
+                        <input type="text" ng-model="add.amount">
+                    </label>
                     <div class="padding-horizontal">
                         <button class="button button-block button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);">Add Balance</button>
 <!--                        <button class="button button-block button-balanced" type="submit" ng-click="topayment()">Add Balance</button>-->
