--- a/templates/modal-form.html
+++ b/templates/modal-form.html
@@ -33,8 +33,11 @@
                     </div>
                     <div class="item item-input text-capitalize">
                         <input type="text" placeholder="Pincode">
-                    </div>   
-                        <div class="item item-input text-capitalize">
+                    </div>
+                    <div class="item item-input text-capitalize">
+                        <input type="text" placeholder="Quantity">
+                    </div>
+                    <div class="item item-input text-capitalize">
                         <input type="text" placeholder="Logistics Charges">
                     </div>
                 </div>
@@ -55,7 +58,7 @@
                 <div class="header-card">Shipping Information</div>
                 <form ng-submit="">
                     <div class="list buy-form">
-<!--
+                        <!--
                         <div class="item item-input text-capitalize">
                             <input type="text" placeholder="Name">
                         </div>
