--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -94,9 +94,9 @@
                         </ion-item>
 
                         <ion-item class="item" ng-repeat="tr in t.admin">
-                            <span class="item-note">Date: {{tr.date}}</span>
                             <p><b>Amount in Barter:</b> {{tr.payableamount}}</p>
                             <p><b>Amount in INR:</b> {{tr.amount}}</p>
+                            <p><b>Date:</b> {{tr.date}}</p>
                             <p ng-if='tr.approvalreason!="";'><b>Reason:</b> {{tr.approvalreason}}</p>
 
                         </ion-item>
