--- a/css/style.css
+++ b/css/style.css
@@ -917,3 +917,23 @@ h3.leftname {
 .incard.notification {
   padding: 10px 15px 0px;
 }
+
+.header-cards {
+  padding: 3px 0px;
+  font-weight: bold;
+  font-size: 16px;
+  border-bottom: 1px solid #ddd;
+}
+
+.bar .button.button-icon.small-icon.arrows:before {
+  font-size: 22px;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.item-content.main {
+  padding: 16px 49px 16px 16px!important;
+}
