--- a/templates/menu.html
+++ b/templates/menu.html
@@ -37,7 +37,10 @@
                 <ion-item nav-clear menu-close href="#/app/transaction">
                     <span>Transaction History</span>
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/app/notification">
+                <ion-item nav-clear menu-close href="#/app/events">
+                    <span>Events</span>
+                </ion-item> 
+                   <ion-item nav-clear menu-close href="#/app/notification">
                     <span>Notification</span>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/aboutus">
