--- a/templates/product.html
+++ b/templates/product.html
@@ -1,4 +1,8 @@
 <ion-view view-title="Products">
+   
+     <ion-nav-buttons side="right">
+        <button class="button button-icon ion-arrow-swap small-icon arrows" ng-click="opensort();"></button>
+    </ion-nav-buttons>
     <ion-content class="padding">
         <div class="incard">
             <div class="header-card">Online Search</div>
