--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -10,8 +10,12 @@
                 <br>Sales
             </div>
             <div class="button" ng-class="admin" ng-click="chnageadmin();">
+                <!--
                 Transaction
                 <br>Charges
+-->
+                Cash Amount
+                <br>Received
             </div>
         </div>
         <div class="padding">
