--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -2,7 +2,7 @@
 	<ion-content class="padding">
 		<div class="incard">
 			<div class="profile-img">
-				<img ng-src="img/1.jpg">
+				<img ng-src={{getsinglepro.image|serverimage}}>
 				<h3>{{getsinglepro.name}}</h3>
 			</div>
 			<div class="list profile-cont padtop5">
