--- a/templates/dealerprd.html
+++ b/templates/dealerprd.html
@@ -13,7 +13,15 @@
                 </div>
             </div>
 -->
-            <div class="row productsCol">
+            <div class="row productsCol" ng-repeat="brk in break">
+                <div class="col col-33 text-center" ng-repeat="b in brk">
+                    <a href="#/app/productdetail/{{b.id}}">
+                        <img ng-src={{b.image|serverimage}} class="full-image">
+                        <h5 class="bold">{{b.name}}</h5>
+                        <h5>{{b.price}}</h5>
+                    </a>
+                </div>
+<!--
                 <div class="col col-33 text-center">
                     <a href="#/app/productdetail">
                         <img src="img/1.jpg" class="full-image">
@@ -28,14 +36,9 @@
                         <h5>9000</h5>
                     </a>
                 </div>
-                <div class="col col-33 text-center">
-                    <a href="#/app/productdetail">
-                        <img src="img/1.jpg" class="full-image">
-                        <h5 class="bold">Xperia Z</h5>
-                        <h5>9000</h5>
-                    </a>
-                </div>
+-->
             </div>
+<!--
             <div class="row productsCol">
                 <div class="col col-33 text-center">
                     <a href="#/app/productdetail">
@@ -57,6 +60,7 @@
                     </a>
                 </div>
             </div>
+-->
         </div>
     </ion-content>
 </ion-view>
