--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -30,7 +30,7 @@
                         <!--Select-->
 
                         <div class="item item-input text-capitalize">
-                            <textarea placeholder="Address" ng-model="profile.address"></textarea>
+                            <textarea placeholder="Address" ng-model="profile.billingaddress"></textarea>
                         </div>
                         <div class="item item-input text-capitalize">
                             <textarea placeholder="Description" ng-model="profile.description"></textarea>
