--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="item item-input item-text-wrap">
                     <div class="input itemproducts">
-                        {{profile.address}}
+                        {{profile.billingaddress}}
                     </div>
                 </div>
 
