--- a/templates/orders.html
+++ b/templates/orders.html
@@ -14,11 +14,11 @@
         <div class="incard">
             <div class="list" ng-if="tabvalue == 1">
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
-                <div class="item item-thumbnail-left" ng-click="openpurchase();">
-                    <img src="img/icon.png">
-                    <h3 class="leftnames">Name: <span>Xperia U</span></h2>
-                    <h3 class="leftnames">Price: <span>8000</span></h3>
-                    <h3 class="leftnames">Transaction ID: <span>78787989</span></h3>
+                <div class="item item-thumbnail-left" ng-click="openpurchase();" ng-repeat="p in mypurchase">
+                    <img ng-src={{p.productimage|serverimage}}>
+                    <h3 class="leftnames">Name: <span>{{p.productname}}</span></h2>
+                    <h3 class="leftnames">Price: <span>{{p.price}}</span></h3>
+                    <h3 class="leftnames">Transaction ID: <span>{{p.transactionid}}</span></h3>
                 </div>
                 <!--
                    <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">
@@ -32,11 +32,11 @@
 
             <div class="list" ng-if="tabvalue == 2">
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
-                <div class="item item-thumbnail-left" ng-click="opensale();">
-                    <img src="img/icon.png">
-                    <h3 class="leftnames">Name: <span>Xperia U</span></h3>
-                    <h3 class="leftnames">Price: <span>8000</span></h3>
-                    <h3 class="leftnames">Transaction ID: <span>78787989</span></h3>
+                <div class="item item-thumbnail-left" ng-click="opensale();" ng-repeat="o in ordr">
+                   <img ng-src={{o.productimage|serverimage}}>
+                    <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
+                    <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
+                    <h3 class="leftnames">Transaction ID: <span>{{o.transactionid}}</span></h3>
                 </div>
             </div>
         </div>
