--- a/templates/modal-mypurchase.html
+++ b/templates/modal-mypurchase.html
@@ -11,33 +11,33 @@
                 <ion-item class="item-left">
                     <h2>Date</h2>
                     <div class="pull-right item-right text-capitalize">
-                        12/4/2015
+						{{getp.timestamp}}
                     </div>
                 </ion-item>
                 <ion-item class="item-left">
                     <h2>Name</h2>
                     <div class="pull-right item-right text-capitalize">
-                        Xperia Z
+						{{getp.productname}}
                     </div>
                 </ion-item>
                 <ion-item class="item-left">
                     <h2>Email Id</h2>
                     <div class="pull-right item-right text-capitalize">
-                        osb@osb.gmail.com
+						{{getp.email}}
                     </div>
                 </ion-item>
 
                 <ion-item class="item-left">
                     <h2>Price</h2>
                     <div class="pull-right item-right text-capitalize">
-                        2000000
+                        {{getp.price}}
                     </div>
                 </ion-item>
 
                 <ion-item class="item-left">
                     <h2>Transition Id</h2>
                     <div class="pull-right item-right text-capitalize">
-                        4565465465
+                        {{getp.transactionid}}
                     </div>
                 </ion-item>
             </div>
