--- a/templates/modal-mysale.html
+++ b/templates/modal-mysale.html
@@ -11,33 +11,33 @@
                 <ion-item class="item-left">
                     <h2>Date</h2>
                     <div class="pull-right item-right text-capitalize">
-                        12/4/2015
+						{{getsell.timestamp}}
                     </div>
                 </ion-item>
                 <ion-item class="item-left">
                     <h2>Name</h2>
                     <div class="pull-right item-right text-capitalize">
-                        Xperia Z
+						{{getsell.productname}}
                     </div>
                 </ion-item>
                 <ion-item class="item-left">
                     <h2>Email Id</h2>
                     <div class="pull-right item-right text-capitalize">
-                        osb@osb.gmail.com
+						{{getsell.email}}
                     </div>
                 </ion-item>
 
                 <ion-item class="item-left">
                     <h2>Price</h2>
                     <div class="pull-right item-right text-capitalize">
-                        2000000
+                        {{getsell.price}}
                     </div>
                 </ion-item>
 
                 <ion-item class="item-left">
                     <h2>Transition Id</h2>
                     <div class="pull-right item-right text-capitalize">
-                        4565465465
+                        {{getsell.transactionid}}
                     </div>
                 </ion-item>
             </div>
