--- a/templates/buydetails.html
+++ b/templates/buydetails.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</ion-content>
-	<ion-footer-bar class="footer-shop ion-item balanced" ng-click="openform1()">
+	<ion-footer-bar class="footer-shop ion-item balanced" ng-click="openform1(getsinglepro.id)">
 		<h4>Buy Now</h4>
 	</ion-footer-bar>
 </ion-view>
