--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,5 +1,5 @@
 <ion-view view-title="My Orders">
-    <div class="centered" ng-if="ordr==0">No Orders.</div>{{ordr.length}}
+<!--    <div class="centered" ng-if="ordr==0">No Orders.</div>{{ordr.length}}-->
     <div class="tabs-striped tabs-top tabs-background-royal tabs-color-light">
         <div class="tabs">
             <a class="tab-item" ng-click="tabvalue = 1;"  ng-class="{'active': tabvalue == 1}">
@@ -14,7 +14,7 @@
         <div class="incard">
             <div class="list" ng-if="tabvalue == 1">
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
-                <div class="item item-thumbnail-left" ng-click="openpurchase();" ng-repeat="p in mypurchase">
+                <div class="item item-thumbnail-left" ng-click="openpurchase(p);" ng-repeat="p in mypurchase">
                     <img ng-src={{p.productimage|serverimage}}>
                     <h3 class="leftnames">Name: <span>{{p.productname}}</span></h2>
                     <h3 class="leftnames">Price: <span>{{p.price}}</span></h3>
@@ -32,7 +32,7 @@
 
             <div class="list" ng-if="tabvalue == 2">
                 <!--                <div class="item item-thumbnail-left bod-bottom" ng-repeat="o in ordr">-->
-                <div class="item item-thumbnail-left" ng-click="opensale();" ng-repeat="o in ordr">
+                <div class="item item-thumbnail-left" ng-click="opensale(o);" ng-repeat="o in ordr">
                    <img ng-src={{o.productimage|serverimage}}>
                     <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
                     <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
